# opening-roulette

./: Cargo.toml  README.md  openings.toml
.github/workflows/: compile-linux.yml
src/: main.rs
