[package]
name = "opening-roulette"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
rand = { version = "0.8.5", features = ["alloc"] }
serde = { version = "1.0.147", features = ["derive"] }
toml = "0.5.9"
